# SDL2-wayland

./: CMakeLists.txt  README.md  SDL2Test  sdl_bmp.c
include/: SDL_config.h  SDL_config_android.h
